🐛 Fix overflow bug in mobile browser (add z-index)

--- a/css/modules.css
+++ b/css/modules.css
@@ -21,6 +21,7 @@
   height: 100%;
   overflow: hidden;
   border-radius: 2rem;
+  z-index: 0;
 }
 
 .weatherIllustration__image {
